--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -23,6 +23,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(Application
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        datagenerator.h datagenerator.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Application APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
