--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -24,6 +24,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         datagenerator.h datagenerator.cpp
+        startwidget.h startwidget.cpp startwidget.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Application APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
