--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(EIGEN_DIR "C:/Libraries") #set(EIGEN_DIR "" CACHE PATH "Path to the Eigen library")
+
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
@@ -25,6 +27,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         datagenerator.h datagenerator.cpp
         startwidget.h startwidget.cpp startwidget.ui
+        machinelearning.h machinelearning.cpp
+        logisticregression.h logisticregression.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Application APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -45,6 +49,11 @@ else()
 endif()
 
 target_link_libraries(Application PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+
+if(EIGEN_DIR)
+    include_directories(${EIGEN_DIR})
+endif()
+
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
